--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,1 +1,39 @@
-
+body {
+	background-color: black;
+	text-align: center;
+	font-family: 'Verdana';
+}
+img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 2%;
+}
+video {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 2%;
+}
+h1 {
+	font-weight: normal;
+	font-size: 50px;
+	color: white;
+}
+h2 {
+	font-weight: 300;
+	font-size: 42px;
+	color: white;
+}
+a {
+	color: aquamarine;
+	font-size: 16px;
+	text-decoration: underline;
+}
+p {
+	font-size: 21px;
+	color: gray;
+}
+.right {
+	text-align: right;
+}
